--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ index.html
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="theme.css">
     <title>Resultado</title>
   </head>
   <body>
