--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ index.html
     <title>Resultado</title>
   </head>
   <body>
-    <p>Quiero ser una fuente de TAMAÑO 44</p>
+    <p> <h1>Quiero ser una fuente de TAMAÑO 44<h1> </p>
   </body>
 </html>
 
